--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <div id="game-container">
         <input type="text" id="textInput" />
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="game.js"></script>
 </body>
 </html>
