--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,interactive-widget: resize-content">
     <title>데이식스 팬게임 : 산성비</title>
     <script src="js/phaser.js"></script>
     <style>
@@ -20,6 +20,7 @@
             justify-content: center;
             align-items: center;
             background-color: black;
+            overflow: hidden;
         }
 
         #game-container {
