--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
         #textInput {
             position: fixed;
             left: 50%;
-            bottom: 120px;
+            bottom: 0px;
             transform: translateX( -50% );
+
+            font-family: 'myfont';
+        }
+        #textInput:focus {
+            outline:none;
         }
     </style>
 </head>
